# jarvis-conversationalist

./: pyproject.toml
.github/workflows/: python-publish.yml  python-test-release.yml
scripts/: host_diarization_models_s3.py
src/jarvis_conversationalist/: __init__.py  audio_identifier.py  openai_interface.py
src/jarvis_conversationalist/openai_functions/: internet_helper.py  weather_functions.py
